[tool.poetry]
name = "ds-toolkit"
version = "0.1.2"
description = ""
authors = ["David Silva <davidsilva2841+gitlab@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
requests = "^2.26.0"
PyPrind = "^2.11.3"
python-magic = "^0.4.24"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
